Fixed responsiveness on mobile view

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -156,6 +156,20 @@
     
   }
 
+  @media (max-width: 480px) {
+
+    .section-light {
+      padding: 20px 20px;
+    }
+
+    .section-dark {
+      padding: 20px 20px;
+    }
+
+    .contact-form {
+      padding-top: 30px;
+    }
+  }
   .contact , .who-am-i {
     font-family: 'Montserrat', sans-serif;
   }
